# dentrado-poc

./: .gitignore  LICENSE  README.md  dentrado-poc.cabal  dentrado.cabal  flake.nix
src/: Coroutine.hs  Db.hs  Main.hs  moduleIds.txt
src/Dentrado/POC/: Data.hs  Db.hs  Gear.hs  Memory.hs  Ser.hs  StateGraph.hs  TH.hs  Types.hs
src/Dentrado/POC/Data/: Container.hs  RadixTree.hs  RadixZipper.hs
tests/: Data.hs  Model.hs  RadixTree.hs  TH.hs
tests/Perf/: Model.hs
tests/Shared/: Model.hs  Util.hs
typst/: en.typ  flake.nix  my.md  ru.typ  works.bib
