cabal-version:   3.0
name:            dentrado-poc
version:         0.1.0.0
license:         AGPL-3.0-or-later
author:          Gardanta Spirito
maintainer:      guardspirit@protonmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    other-modules:    Coroutine, Db
    build-depends:    base >= 4, rio >= 0.1, mtl >= 2.3, fused-effects >= 1.1, hashable >= 1.4,
        free >= 5.2, containers >= 0.6
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude, BangPatterns, ExistentialQuantification,
        GADTs, ScopedTypeVariables, TypeApplications, ImpredicativeTypes, BlockArguments,
        TypeOperators, FlexibleInstances, MultiParamTypeClasses, UndecidableInstances,
        GeneralizedNewtypeDeriving, LambdaCase, KindSignatures, FlexibleContexts
