cabal-version:   3.0
name:            dentrado-poc
version:         0.1.0.0
license:         AGPL-3.0-or-later
author:          Gardanta Spirito
maintainer:      guardspirit@protonmail.com
build-type:      Simple

common lang
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude, BangPatterns, ExistentialQuantification,
        GADTs, ScopedTypeVariables, TypeApplications, ImpredicativeTypes, BlockArguments,
        TypeOperators, FlexibleInstances, MultiParamTypeClasses, UndecidableInstances,
        GeneralizedNewtypeDeriving, LambdaCase, KindSignatures, FlexibleContexts, OverloadedRecordDot,
        OverloadedStrings, OverloadedLists, ViewPatterns, TypeFamilies, TemplateHaskell, DerivingVia, DataKinds,
        TupleSections
    build-depends: base >= 4, rio >= 0.1, mtl >= 2.3, fused-effects >= 1.1, hashable >= 1.4,
        free >= 5.2, containers >= 0.6, template-haskell >= 2.19

library dentrado-poc-lib
    import: lang
    hs-source-dirs: src
    exposed-modules:
        Dentrado.POC.Data.Container,
        Dentrado.POC.Data.RadixTree,
        Dentrado.POC.Data.RadixZipper,
        Dentrado.POC.Db,
        -- Dentrado.POC.StateGraph,
        Dentrado.POC.TH

executable dentrado-poc-exe
    import: lang
    hs-source-dirs: src
    main-is: Main.hs
    build-depends: dentrado-poc-lib

test-suite th
    import: lang
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: TH.hs
    build-depends: dentrado-poc-lib, QuickCheck >= 2

test-suite radix-tree
    import: lang
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: RadixTree.hs
    build-depends: dentrado-poc-lib, QuickCheck >= 2
